--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+    <button id="reqs" type="button" target="null" onclick="document.location = 'https://gslevel.github.io/lupreqs/'"><strong>Read the +1UP Requirements before applying</strong></button>
+    <div id="everything" style="display: none;">
     <div id="header">
         <img src="https://cdn.discordapp.com/attachments/699663156011729023/747133963222515772/1UPLogoTransparent.png" id="logo">
         <button type="button" id="menuBtn">Menu</button>
@@ -17,6 +18,7 @@
         <ul id="coreLinks">
             <li>About +1UP</li>
             <li>How to apply</li>
+            <li><a href="https://gslevel.github.io/lupapplicationtest/" style="text-decoration: none;">Apply</a></li>
         </ul>
     </div>
     <div id="info">
@@ -37,6 +39,7 @@
         </div>
         <button type="submit" class="submit">Submit</button>
     </form>
+</div>
     <script src="index.js"></script>
 </body>
 </html>
