--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apply for +1UP</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="responsive.css">
 </head>
 <body>
     <button id="reqs" type="button" target="null" onclick="document.location = 'https://gslevel.github.io/lupreqs/'"><strong>Read the +1UP Requirements before applying</strong></button>
