--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <form action="https://formspree.io/mbjzeqwz" method="POST" id="application">
         <div id="ign">
-        <strong>IGN:</strong> <input type="text" name="In Game Name" placeholder="Type in your krunker IGN" id="ignInput" maxlength="14" style="text-align: center;">
+        <strong><tl id="ignText">IGN:</tl></strong> <input type="text" name="In Game Name" placeholder="Type in your krunker IGN" id="ignInput" maxlength="14" style="text-align: center;">
         </div>
         <div id="tag">
         <tl id="tagText"><strong>Discord Tag:</tl></strong> <input type="text" name="Discord Tag" placeholder="Type in your discord tag" id="tagInput" style="text-align: center;">
